# portfolio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e071c01facd2_create_projects_table.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/db/: init_db.py  seed.py
backend/app/models/: project.py
backend/app/schemas/: project.py
docs/: architecture.md  roadmap.md  threat-model.md
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[slug]/: page.tsx
frontend/src/lib/: api.ts
