[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for portfolio platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "alembic",
]

[tool.uvicorn]
factory = false
